--- a/85_percent_accuracy.ipynb
+++ b/85_percent_accuracy.ipynb
@@ -90,8 +90,8 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "os.environ['KAGGLE_USERNAME'] = \"sweetyagarwal\" # username from the json file\n",
-        "os.environ['KAGGLE_KEY'] = \"a9a77443488780e5e917e15412688cd8\" # Provide your key from the json file\n",
+        "os.environ['KAGGLE_USERNAME'] = \"*\" # username from the json file\n",
+        "os.environ['KAGGLE_KEY'] = \"**\" # Provide your key from the json file\n",
         "!kaggle competitions download -c fake-image-classification-challenge # api copied from kaggle"
       ],
       "metadata": {
