--- a/96_percent_accuracy.ipynb
+++ b/96_percent_accuracy.ipynb
@@ -109,8 +109,8 @@
       ],
       "source": [
         "import os\n",
-        "os.environ['KAGGLE_USERNAME'] = \"avnimittal\" # username from the json file\n",
-        "os.environ['KAGGLE_KEY'] = \"4bc180dbb8b4fc29c7d4d0b5f6b77707\" # Provide your key from the json file\n",
+        "os.environ['KAGGLE_USERNAME'] = \"*\" # username from the json file\n",
+        "os.environ['KAGGLE_KEY'] = \"**\" # Provide your key from the json file\n",
         "!kaggle competitions download -c fake-image-classification-challenge # api copied from kaggle"
       ],
       "id": "OJTSgL8EzqIy"
